--- a/insight.html
+++ b/insight.html
@@ -32,13 +32,13 @@
 	<div class = "contentwrap">
 	<div class = "wrapper" id = "checkup">
 		<label class = "profilename" style="color: #9251F7;">Insights</label>
-		<label class = "title">This week's insights and correlations</label>
+		<label class = "title">This week's insights</label>
 		
 		<!-- <div class = "avatar2">
 			<img class = "logo" src="light-bulb.png" width = "70px">
 		</div> -->
 		<br>
-		<label class = "summary"  style= "margin-top: 5px;">View all the insights based on your log and the data from other apps you've allowed. Please remember, correlation does not imply causation.</label>
+		<label class = "summary"  style= "margin-top: 5px;">View all the insights based on your log and the data from other apps you've allowed.</label>
 		<br>
 		<br>
         <div class="insight" id ="in1" onclick="drawChart(this.id);select(this.id);">
@@ -99,7 +99,8 @@
 	
 	<div class="contentwrap" id = "tab2">
 		<div class = "wrapper" id = "goals" >
-			<label class = "title">Data</label>
+			<label class = "profilename" style="color: #019055;">Graphs</label>
+			<label class = "title">View your data</label>
 			<div id = "changer">
 				<div class="empty-insight">
 					<div class = "emptyemoji">👈🏼</div>
@@ -110,7 +111,8 @@
 			
 		</div>
 		<div class = "wrapper" id = "goals">
-	 		<label class = "title">Correlation</label>
+			<label class = "profilename" style="color: #f05c00;">Correlations</label>
+	 		<label class = "title">Correlations between data</label>
 			 <div id = "changer2">
 			  <div class="empty-insight">
 				<div class="emptyemoji">☝🏼</div>
