--- a/insight.html
+++ b/insight.html
@@ -102,7 +102,7 @@
 			<label class = "profilename" style="color: #019055;">Graphs</label>
 			<label class = "title">View your data</label>
 			<div id = "changer">
-				<div class="empty-insight">
+				<div class="empty-insight" style= "height: 185px; margin-top: 6px;">
 					<div class = "emptyemoji">👈🏼</div>
 					<div class="emptytext">Select one of these insights to view data</div>
 				</div>
@@ -114,7 +114,7 @@
 			<label class = "profilename" style="color: #f05c00;">Correlations</label>
 	 		<label class = "title">Correlations between data</label>
 			 <div id = "changer2">
-			  <div class="empty-insight">
+			  <div class="empty-insight" style= "height: 185px; margin-top: 6px;">
 				<div class="emptyemoji">☝🏼</div>
 				<div class="emptytext">Correlations derived from data above</div>
 			</div>
