edited checkup link

--- a/profile.html
+++ b/profile.html
@@ -278,7 +278,7 @@
 		</div>
 	</div>
 		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:69.5px; font-size:15px;">You logged for 4 days in a row! Keep it up!</label>
-		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Log your symptoms</a><br/>
+		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/checkup.html';" id="log">Log your symptoms</a><br/>
 
 
 		<div class = "avatar" style = "top:500px; left:25px">
