--- a/insight.html
+++ b/insight.html
@@ -193,7 +193,7 @@
    
 	   if(val=="in1"){
 		   changer.innerHTML = "<div id = chart_div></div>";
-		   changer2.innerHTML = "<div class = \"correlation\">There was an upward trend in your sleep time this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Sleeping can increase productivity? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\" >Start experiment</a><br /></div>"
+		   changer2.innerHTML = "<div class = \"correlation\">There was an upward trend in your sleep time this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Sleeping can increase productivity? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\font-size: 16px;\" >Start experiment</a><br /></div>"
 		   console.log("here");
 	   var data = new google.visualization.DataTable();
 	   data.addColumn('string', 'Day');
@@ -222,7 +222,7 @@
 	   }
 	   if(val=="in2"){
 		changer.innerHTML = "<div id = chart_div></div>";
-		changer2.innerHTML = "<div class = \"correlation\">Your total walking and running distances increased this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Walking reduces risk of heart diseases? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\" >Start experiment</a><br /></div>"
+		changer2.innerHTML = "<div class = \"correlation\">Your total walking and running distances increased this week<br>We also found that you reported less headaches and stress-related symptopms<br><br>Did you know : Walking reduces risk of heart diseases? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\font-size: 16px;\" >Start experiment</a><br /></div>"
 		var data = new google.visualization.DataTable();
       data.addColumn('string', 'Day');
       data.addColumn('number', 'Running Distance');
@@ -262,7 +262,7 @@
 	   }
 	   if(val == "in3"){
 		changer.innerHTML = "<div id = chart_div></div>";
-		changer2.innerHTML = "<div class = \"correlation\">Your total calorie consuption is down this week<br>We also found that you did not report any stomach aches<br><br>Did you know : Studies show high protein diets promote metabolic health? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\" >Start experiment</a><br /></div>"
+		changer2.innerHTML = "<div class = \"correlation\">Your total calorie consuption is down this week<br>We also found that you did not report any stomach aches<br><br>Did you know : Studies show high protein diets promote metabolic health? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%;\font-size: 16px;\" >Start experiment</a><br /></div>"
 		var data = google.visualization.arrayToDataTable([
           ['Diet class', 'Hours per Day'],
           ['Protein',     11],
