--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
 	</div>
 
 	<div class = contentwrap>
-	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255); margin-right:23px">
+	<div class = "wrapper" id = "checkup" style = "background-color:rgb(255, 255, 255); margin-right:15px">
 		<label class = "profilename" style="color: #9251F7;">Log history</label>
 		<label class = "title" width="100%">View all your log entries</label>
 		<br>
@@ -362,7 +362,7 @@
 				<label>Insight</label>
 			</div>
 			
-			<div class="buttonactive">
+			<div class="buttonactive last">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
 				<label>Log History</label>
 			</div>
