--- a/insight.html
+++ b/insight.html
@@ -146,7 +146,7 @@
 				<label>Insight</label>
 			</div>
 			
-			<div class="button" onclick = "location.href='profile.html';">
+			<div class="button last" onclick = "location.href='profile.html';">
 				<div class = "icon"><img src="profile.png" width = "30px"></div>
 				<label>Log History</label>
 			</div>
