--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -3126,7 +3126,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-d6c3915b" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="physical-checkup.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="15" height="15" alt="" class="back-icon" style ="margin-right: 5px;">
+        <a href="physical-checkup.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="15" height="15" alt="" class="start-over-icon" style ="margin-right: 5px;">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
