--- a/import/mental-checkup.html
+++ b/import/mental-checkup.html
@@ -367,7 +367,7 @@
         <p id="w-node-_9bb44174-3cc7-0429-ac89-60fd407a3727-69fc2335" data-w-id="9bb44174-3cc7-0429-ac89-60fd407a3727" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="mental-checkup.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="15" height="15" alt="" class="start-over-icon" style ="margin-right: 5px;"
+        <a href="mental-checkup.html" class="delete w-inline-block"><img src="images/3668837.png" loading="lazy" width="15" height="15" alt="" class="start-over-icon" style ="margin-right: 5px;">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
