--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -66,7 +66,7 @@
         <div class="reset-selection-text">Unselect part</div>
       </a>
       <a id="back-to-start" data-w-id="be064e99-200b-bf1d-ceb2-35877f5de780" href="#" class="back-to-start w-inline-block"><img src="images/962px-Person_icon_BLACK-01.svg.png" loading="lazy" width="20" sizes="(max-width: 767px) 25px, (max-width: 991px) 3vw, 25px" srcset="images/962px-Person_icon_BLACK-01.svg-p-500.png 500w, images/962px-Person_icon_BLACK-01.svg.png 962w" alt="" class="back-icon">
-        <div class="back-to-start-text">Back</div>
+        <div class="back-to-start-text">Back to start</div>
       </a>
       <div data-w-id="92833de1-21a5-e63e-3bdd-b88fd9f88a0f" class="human">
         <a part-name="Left arm + hand" data-w-id="5523df3d-5e77-a8f3-8b87-b423dde23db7" href="#" class="body-part left-arm w-inline-block">
