--- a/insight.html
+++ b/insight.html
@@ -99,7 +99,7 @@
 			</div>
 			
 			<div class="para" style="text-align: left;">
-			<label class="title">Screen Time</label>
+			<label class="title" style="white-space:nowrap;">Screen Time</label>
 			<label class="summary">2hrs</label>
 			 </div>
 			 <div class="diagram">
@@ -115,7 +115,7 @@
 			</div>
 			
 			<div class="para" style="text-align: left;">
-			<label class="title">Audio levels</label>
+			<label class="title" style="white-space:nowrap;">Audio levels</label>
 			<label class="summary">5db(40 min)</label>
 			 </div>
 			 <div class="diagram">
