--- a/insight.html
+++ b/insight.html
@@ -374,7 +374,7 @@
 	   }
 		 if(val=="in5"){
 		   changer.innerHTML = "<div id = chart_div></div>";
-		   changer2.innerHTML = "<div class = \"correlation\">There was an  decrease in your audio exposure this week<br>We also found that you recorded more productivity this week this week<br><br>Did you know : Wearing heaphones for prolonged periods can increase the risk of hearing loss Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%; font-size: 16px;\" >Start experiment</a><br /></div>"
+		   changer2.innerHTML = "<div class = \"correlation\">There was an  decrease in your audio exposure this week<br>We also found that you recorded more productivity this week this week<br><br>Did you know : Wearing heaphones for prolonged periods can increase the risk of hearing loss? Start an experiment now<br><a class=\"gradient-button gradient-button-2\" href=\"experiments.html\" style=\"width: 100%; font-size: 16px;\" >Start experiment</a><br /></div>"
 		   console.log("here");
 	   var data = new google.visualization.DataTable();
 	   var data = google.visualization.arrayToDataTable([
