--- a/goals.html
+++ b/goals.html
@@ -66,7 +66,24 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		
+		<label class = "title" style="color: #f05c00;">Experiment duration</label>
+		<br>
+		<br>
+
+		<div class = "changer" style = "position:relative; left:10px">
+		<label class = "profilename" style = "font-size:20px">Run this experiment for</label>
+
+		<div class="field">
+			<input type="number" placeholder="0" required style="width:15%; font-size:20px" id = "time">
+
+			<div class = "ageselect">
+			  <li id ="a+" class = "agelayer" onclick="addWeek()"><label class = "prompt">+</label></li>
+			  <li id ="a-"  class = "agelayer" onclick="subtractWeek()"><label class = "prompt">-</label></li>
+			</div>
+	   </div>
+
+	   <label class = "profilename" style = "font-size:20px">weeks</label>
+	   </div>
 
 
 			<div class = "avatar" style = "top:8px; left:390px">
