--- a/goals.html
+++ b/goals.html
@@ -36,16 +36,16 @@
 				<p id = "experiment-description" class = "profilename" style = "width:100%; position:relative; top:7px; left:7px">In this experiment you will try to increase your normal sleep duration by 1 hour each day to reduce your headaches and symptoms of stress.</p>
 			</div>
 		</div>
-
+		<br>
 		<label class = "title" style="color: #f05c00;">Experiment duration</label>
 		<br>
 		<br>
 
 		<div class = "changer" style = "position:relative; left:10px">
-		<label class = "profilename" style = "font-size:20px">Run this experiment for</label>
+		<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
 		<div class="field">
-			<input type="number" placeholder="0" required style="width:15%; font-size:20px" id = "time">
+			<input type="number" placeholder="0" required style="width:15%; font-size:31px" id = "time">
 
 			<div class = "ageselect">
 			  <li id ="a+" class = "agelayer" onclick="addWeek()"><label class = "prompt">+</label></li>
@@ -53,8 +53,9 @@
 			</div>
 	   </div>
 
-	   <label class = "profilename" style = "font-size:20px">weeks</label>
+	   <label class = "profilename" style = "font-size:32px">weeks</label>
 	   </div>
+
 		
 		<a class= "gradient-button gradient-button-2" style = "background-color:red" onclick = "consultDoctor()" id="log">Consult doctor</a><br/>
 
@@ -66,24 +67,25 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<label class = "title" style="color: #f05c00;">Experiment duration</label>
-		<br>
-		<br>
+		<div class = "wrapper" id = "goals" style = "top:-11px">
+        	<label class = "title" style="color: #f05c00;">Experiment duration</label>
+			<br>
+			<br>
 
-		<div class = "changer" style = "position:relative; left:10px">
-		<label class = "profilename" style = "font-size:20px">Run this experiment for</label>
+			<div class = "changer" style = "position:relative; left:10px">
+			<label class = "profilename" style = "font-size:31px">Run this experiment for</label>
 
-		<div class="field">
-			<input type="number" placeholder="0" required style="width:15%; font-size:20px" id = "time">
+			<div class="field">
+				<input type="number" placeholder="0" required style="width:15%; font-size:31px" id = "time">
 
-			<div class = "ageselect">
-			  <li id ="a+" class = "agelayer" onclick="addWeek()"><label class = "prompt">+</label></li>
-			  <li id ="a-"  class = "agelayer" onclick="subtractWeek()"><label class = "prompt">-</label></li>
-			</div>
-	   </div>
+				<div class = "ageselect">
+				  <li id ="a+" class = "agelayer" onclick="addWeek()"><label class = "prompt">+</label></li>
+				  <li id ="a-"  class = "agelayer" onclick="subtractWeek()"><label class = "prompt">-</label></li>
+				</div>
+		   </div>
 
-	   <label class = "profilename" style = "font-size:20px">weeks</label>
-	   </div>
+		   <label class = "profilename" style = "font-size:32px">weeks</label>
+		   </div>
 
 
 			<div class = "avatar" style = "top:8px; left:390px">
