--- a/goals.html
+++ b/goals.html
@@ -79,7 +79,7 @@
 			
 
 			<a class= "gradient-button gradient-button-2" style = "background-color:rgb(4, 216, 4); width:90%; top:80px; left:25px" onclick="refreshExperiment()" id="log">Generate New Experiment</a><br/>
-    		<a class= "gradient-button gradient-button-2" style = "width:90%; left:25px; top:200px" onclick = "confirmExperiment()" id="log">Register Experiment and Add to Goals</a><br/>
+    		<a class= "gradient-button gradient-button-2" style = "width:90%; left:25px; top:200px" onclick = "confirmExperiment()" id="log">Register Experiment</a><br/>
 
 			<div class = "avatar" style = "left:5px; top:70px">
 				<img class="logo" src="refresh.png" width = "120px">
