--- a/goals.html
+++ b/goals.html
@@ -68,7 +68,28 @@
 	<div class = "contentwrap" id = tab2>
 
 		<div class = "wrapper" id = "goals" style = "top:-11px">
-        	
+        	<label class = "title">You have 3 active goals</label><br>
+		
+		<div class = "goalstab">
+			<div class="progress-circle-container">
+				<div class = "mini">
+				<div class="progress-circle progress-1"><span>10</span></div> 
+				<label class = "summary">Sleep</label>
+			</div>
+			</div>
+			<div class="progress-circle-container">
+				<div class = "mini">
+				<div class="progress-circle progress-2"><span>30</span></div> 
+				<label class = "summary">Activity</label>
+			</div>
+			</div>
+			<div class="progress-circle-container">
+				<div class = "mini">
+				<div class="progress-circle progress-3"><span>50</span></div> 
+				<label class = "summary">Diet</label>
+			</div>
+			</div>
+			</div>
         </div>
 
 
