--- a/goals.html
+++ b/goals.html
@@ -74,7 +74,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-1"><span>10</span></div> 
-				<label class = "summary">Sleep</label>
+				<label class = "summary">Sleep <br> Your goal to have better</label>
 			</div>
 			</div>
 			<div class="progress-circle-container">
