--- a/goals.html
+++ b/goals.html
@@ -80,7 +80,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-2"><span>30</span></div> 
-				<label class = "summary">Activity <br> Increase number of walks to reduce heartaches</label>
+				<label class = "summary">Activity <br> Increase walks to reduce heartaches</label>
 			</div>
 			</div>
 			<div class="progress-circle-container">
