--- a/goals.html
+++ b/goals.html
@@ -86,7 +86,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-3"><span>50</span></div> 
-				<label class = "summary">Diet</label>
+				<label class = "summary">Diet <br> Maintain keto diet to improve metabolism</label>
 			</div>
 			</div>
 			</div>
