--- a/goals.html
+++ b/goals.html
@@ -68,7 +68,7 @@
 	<div class = "contentwrap" id = tab2>
 
 		<div class = "wrapper" id = "goals" style = "top:-11px">
-        	<label class = "title">How much you achieved for each goal</label><br>
+        	<label class = "title">How much you have achieved for each goal</label><br>
 		
 		<div class = "goalstab">
 			<div class="progress-circle-container">
