--- a/goals.html
+++ b/goals.html
@@ -74,19 +74,19 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-1"><span>10</span></div> 
-				<label class = "summary">Sleep <br> Increase sleep time to reduce headaches</label>
+				<label class = "summary">Increase sleep time to reduce headaches</label>
 			</div>
 			</div>
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-2"><span>30</span></div> 
-				<label class = "summary">Activity <br> Increase walks to reduce heartaches</label>
+				<label class = "summary">Increase walks to reduce heartaches</label>
 			</div>
 			</div>
 			<div class="progress-circle-container">
 				<div class = "mini">
 				<div class="progress-circle progress-3"><span>50</span></div> 
-				<label class = "summary">Diet <br> Maintain keto diet to improve metabolism</label>
+				<label class = "summary">Maintain keto diet to improve metabolism</label>
 			</div>
 			</div>
 			</div>
