--- a/homepage.html
+++ b/homepage.html
@@ -173,7 +173,7 @@
 				<div class = "icon"><img src="checkup.png" width = "30px"></div>
 				<label>Checkup</label>
 			</div>
-			<div class="button" onclick = "location.href='goals.html';">
+			<div class="button" onclick = "location.href='import/goals.html';">
 				<div class = "icon"><img src="goals.png" width = "30px" ></div>
 				<label>Goals</label>
 			</div>
