--- a/import/checkup.html
+++ b/import/checkup.html
@@ -72,7 +72,7 @@
      <a href="checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Goals</div>
       </a>
       <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
