--- a/profile.html
+++ b/profile.html
@@ -277,7 +277,7 @@
 			</div>
 		</div>
 	</div>
-		<label class = "summary" style="color:rgb(241, 93, 7); position:relative; top:3px; left:69.5px; font-size:15px;">You logged for 4 days in a 
+		<label class = "summary" style="color: grey; position:relative; top:3px; left:69.5px; font-size:15px;">You logged for 4 days in a 
 			row! Keep it up!</label>
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/checkup.html';" id="log">Log your symptoms</a><br/>
 	</div>
